<resources>
    <string name="app_name">BullseyeCANBECHANGEDINSTRINGRESOURCE</string>
    <string name="instruction_Text">PUT THE BULLSEYE AS CLOSE AS YOU CAN TO</string>
    <string name="target_value_text">65</string>
    <string name="min_value_text">1</string>
    <string name="max_value_text">100</string>
    <string name="hit_me_button">HIT ME</string>
    <string name="result_dialog_title">Hello there!</string>
    <string name="result_dialog_message">The slider\'s value is %1$d.\nYou scored %2$d points this round.</string>
    <string name="result_button_text">Awesome!</string>
    <string name="info">Info</string>
    <string name="start_over">Start Over</string>
    <string name="score_label">Score</string>
    <string name="current_round_label">Round</string>
    <string name="alert_title_1">PERFECT!</string>
    <string name="alert_title_2">You almost had it!</string>
    <string name="alert_title_3">Not Bad.</string>
    <string name="alert_title_4">Where Were you aiming?!?</string>
    <string name="about_title_text">🎉 Bullseye 🎉\'</string>
    <string name="about_bullseye_text">This is Bullseye, the game where you can win points and earn fame by dragging a slider.\nYour goal is to place the slider as close as possible to the target value. The closer you are, the more points you score.\nEnjoy!</string>
    <string name="back_button_text">Go Back!</string>
    <string name="about_page_title">About Bullseye</string>
    <string name="scoreAmountText">0</string>
    <string name="roundAmountText">0</string>
    <string name="bg_image">Target Background Image</string>
    <string name="info_description">Information Section</string>
    <string name="restart_description">Restart Round</string>
    <string name="target_slider">Target Slider</string>


</resources>